--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
+    "react-github-calendar": "^3.3.3",
     "react-icons": "^4.4.0",
     "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.3.0",
